[package]
authors = ["egui-chinese-font contributors <259901434@qq.com>"]
categories = ["gui", "internationalization", "text-processing"]
description = "Cross-platform Chinese font loading for egui applications"
documentation = "https://docs.rs/egui-chinese-font"
edition = "2021"
exclude = ["target/", "examples/target/"]
homepage = "https://github.com/username/egui-chinese-font"
keywords = ["egui", "chinese", "font", "gui", "cjk"]
license = "MIT OR Apache-2.0"
name = "egui-chinese-font"
readme = "README.md"
repository = "https://github.com/username/egui-chinese-font"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
egui = "0.33"

[dev-dependencies]
eframe = "0.33"
